--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/0xAndrewBlack/gd-discord-bot#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "date-and-time": "^0.13.1",
+    "cron": "^1.8.2",
     "discord.js": "^12.1.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-cron": "^2.0.3"
   }
 }
