--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "homepage": "https://github.com/0xAndrewBlack/gd-discord-bot#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cron": "^1.8.2",
     "discord.js": "^12.1.1",
     "express": "^4.17.1",
-    "node-cron": "^2.0.3"
+    "node-schedule": "^1.3.2"
   }
 }
