--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "discord.js": "^12.1.1",
     "express": "^4.17.1",
     "node-schedule": "^1.3.2"
+  },
+  "devDependencies": {
+    "jest": "^25.3.0"
   }
 }
