--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/0xAndrewBlack/gd-discord-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.2.1",
     "body-parser": "^1.19.0",
     "discord.js": "^12.1.1",
     "express": "^4.17.1",
-    "node-schedule": "^1.3.2"
+    "ffmpeg": "0.0.4",
+    "node-schedule": "^1.3.2",
+    "ytdl": "^1.3.0",
+    "ytdl-core": "^2.1.1",
+    "ytdl-core-discord": "^1.2.0"
   },
   "devDependencies": {
     "jest": "^25.3.0"
